--- a/build.gradle
+++ b/build.gradle
@@ -5,18 +5,18 @@ buildscript {
         // Versions for all the dependencies we plan to use. It's particularly useful for kotlin and
         // navigation where the versions of the plugin needs to be the same as the version of the
         // library defined in the app Gradle file
-        version_android_gradle_plugin = '3.4.1'
-        version_core = "1.0.1"
-        version_constraint_layout = "1.1.3"
-        version_glide = "4.8.0"
-        version_kotlin = "1.3.21"
-        version_kotlin_coroutines = "1.1.0"
-        version_lifecycle_extensions = "2.0.0"
-        version_moshi = "1.8.0"
+        version_android_gradle_plugin = '3.5.2'
+        version_core = '1.1.0'
+        version_constraint_layout = '2.0.0-beta3'
+        version_glide = '4.10.0'
+        version_kotlin = '1.3.50'
+        version_kotlin_coroutines = "1.1.1"
+        version_lifecycle_extensions = '2.1.0'
+        version_moshi = '1.9.1'
         version_navigation = "1.0.0"
-        version_retrofit = "2.6.0"
+        version_retrofit = '2.6.2'
         version_retrofit_coroutines_adapter = "0.9.2"
-        version_recyclerview = "1.0.0"
+        version_recyclerview = '1.1.0-rc01'
     }
 
     repositories {
